// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-heading should render with _label="Headline" _level=0 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <strong class="headline headline-strong kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </strong>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=1 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h1 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=2 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h2 class="headline headline-h2 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h2>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=3 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h3 class="headline headline-h3 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h3>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=4 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h4 class="headline headline-h4 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h4>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=5 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h5 class="headline headline-h5 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h5>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=6 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h6 class="headline headline-h6 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h6>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h1" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h1 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h2" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h2 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h3" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h3 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h4" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h4 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h5" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h5 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h6" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h6 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="strong" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-strong kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" 1`] = `
<kol-heading class="kol-heading">
  <template shadowrootmode="open">
    <h1 class="headline headline-h1 kol-heading-wc">
      Headline
      <slot name="expert" slot="expert"></slot>
    </h1>
  </template>
</kol-heading>
`;
